--- a/views/pages/navbar.ejs
+++ b/views/pages/navbar.ejs
@@ -9,6 +9,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/login">Data</a>
+                <a class="nav-link" href="/logout">Logout</a>
             </div>
         </div>
     </div>
