--- a/views/pages/selection.ejs
+++ b/views/pages/selection.ejs
@@ -30,7 +30,14 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Daily Recommendations</h5>
-                <span class="card-text"></span>
+                <span class="card-text">
+                    <form action="/display/dailyNewSongs">
+                        <!-- <label for="numSongRange">Number of Songs (Between 0 and 10):</label> -->
+                        <!-- <input type="range" name="numSongRange" id="numSongRange" min="1" max="10"> -->
+                        <!-- <output for="numSongRange" onforminput="value = numSongRange.valueAsNumber;"></output> -->
+                        <button class="btn btn-info" id="dailySongButton">Show Me!</button>
+                    </form>
+                </span>
             </div>
         </div>
         <div class="card">
