--- a/public/styles.css
+++ b/public/styles.css
@@ -8,12 +8,28 @@
     padding: 3px;
 }
 
+
+
 .card {
+    min-width: 240px;
     max-height: 240px;
     max-width: 240px;
 }
 
 .songInfo {
     font-size: 14px;
+    text-align: center;
+}
+
+.navbar-brand {
+    color: #1db954;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+#missedHeader {
     text-align: center;
 }
