--- a/views/pages/daily.ejs
+++ b/views/pages/daily.ejs
@@ -13,9 +13,7 @@
 <body>
 
 <div class="container">
-    <div class="row mt-3 mb-3">
-        <h2 class="display-5" id="dailyHeader">Your <%= myDailyTracks.length %>  Daily Songs</h4>
-    </div>
+    <h1 id="dailyHeader">Your <%= myDailyTracks.length %>  Daily Songs</h4>
     <div class="row d-flex justify-content-center">
         <% for (var j = 0; j < myDailyTracks.length; j++) { %>
             <div class="card">
