Updated routes and smoke tested

--- a/views/discography/discography.ejs
+++ b/views/discography/discography.ejs
@@ -1,4 +1,4 @@
-<%- include("../navbar") %>
+<%- include("../../helpers/navbar") %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <script src="/discography/discography.js"></script>
     <title>Artist Discography</title>
 </head>
 
@@ -16,10 +17,9 @@
     <div id="missedHeader">
         <h1>You missed Testing Songs!</h4>
         <span>
-        <button id="button" onClick="greet()"><%= label() %></button>
+        <button id="button" onClick="greet()">Testing</button>
         </span>
     </div>
 
 </body>
-<script src="/discography/discography.js"></script>
 </html>
