Skeleton of getDiscography

--- a/views/discography/discography.ejs
+++ b/views/discography/discography.ejs
@@ -19,7 +19,12 @@
         <span>
         <button id="button" onClick="greet()">Testing</button>
         </span>
+        <form action="/discography/search" method="post">
+            <input type="text" name="artistName" placeholder="Artist Name">
+            <button class="btn btn-info">Search Discography!</button>
+        </form>
     </div>
+    
 
 </body>
 </html>
